--- a/xaringan-slides/slides.html
+++ b/xaringan-slides/slides.html
@@ -4,7 +4,7 @@
     <title>rtweet tutorial</title>
     <meta charset="utf-8" />
     <meta name="author" content="🌈 Zane Dax (She/They) 🌈" />
-    <meta name="date" content="2022-01-10" />
+    <meta name="date" content="2022-01-25" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/rladies.css" rel="stylesheet" />
@@ -18,7 +18,7 @@ class: center, middle, inverse, title-slide
 ## <br/>with RLadies
 ### 🌈 Zane Dax (She/They) 🌈
 ### <span class="citation">@StarTrek_Lt</span>
-### 2022-01-10
+### 2022-01-25
 
 ---
 
@@ -540,7 +540,7 @@ class: inverse, middle, center
 ---
 # Further Information
 
-- I have a full detailed rtweet guide (learnr file) that tells you pretty much all of the documentation with understandable examples. 
+- I have a detailed rtweet guide (learnr file) that tells you pretty much all of the documentation with understandable examples. 
 
 - Twitter CSV datasets are available on GitHub for you to practice with for those without a API key. 
 
