--- a/xaringan-slides/slides.html
+++ b/xaringan-slides/slides.html
@@ -15,7 +15,7 @@
 class: center, middle, inverse, title-slide
 
 # rtweet tutorial
-## <br/>with RLadies
+## <br/>with R-Ladies Coventry
 ### 🌈 Zane Dax (She/They) 🌈
 ### <span class="citation">@StarTrek_Lt</span>
 ### 2022-01-26
